add a gulpfile and stuff

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <canvas id="sort-pixels"></canvas>
+    <button id="buttery">buttery</button>
     <script src="butter.js"></script>
     <script src="app.js"></script>
   </body>
