add select dropdown for the mode

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,11 @@
   </head>
   <body>
     <canvas id="sort-pixels"></canvas>
+    <select name="mode" id="mode-select">
+      <option value="black" selected>black</option>
+      <option value="bright">bright</option>
+      <option value="white">white</option>
+    </select>
     <button id="buttery">buttery</button>
     <script src="butter.js"></script>
     <script src="app.js"></script>
