--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
       <option value="bright">bright</option>
       <option value="white">white</option>
     </select>
+    <button id="reset-img">reset</button>
     <button id="buttery">buttery</button>
     <script src="butter.js"></script>
     <script src="app.js"></script>
