adjust sorting threshold with a slider

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
       <option value="bright">bright</option>
       <option value="white">white</option>
     </select>
+    <input id="threshold" type="range" value="0" min="0" max="0">
     <button id="reset-img">reset</button>
     <button id="buttery">buttery</button>
     <script src="butter.js"></script>
