--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
     <link rel="shortcut icon" href="./favicon.ico">
   </head>
   <body>
-    <canvas id="sort-pixels"></canvas>
-    <input type="file" id="file-upload">
-    <button id="reset-img">reset</button>
-    <select name="mode" id="mode-select">
-      <option value="black" selected>black</option>
-      <option value="bright">bright</option>
-      <option value="white">white</option>
-    </select>
-    <input id="threshold" type="range" value="0" min="0" max="0">
-    <button id="buttery">buttery</button>
+    <div class="content">
+      <canvas id="sort-pixels"></canvas>
+      <input type="file" id="file-upload">
+      <button id="reset-img">reset</button>
+      <select name="mode" id="mode-select">
+        <option value="black" selected>black</option>
+        <option value="bright">bright</option>
+        <option value="white">white</option>
+      </select>
+      <input id="threshold" type="range" value="0" min="0" max="0">
+      <button id="buttery">buttery</button>
+    </div>
     <script src="butter.js"></script>
     <script src="app.js"></script>
   </body>
