--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Butter</h1>
     </header>
     <div class="content">
-      <div class="inner-content">
+      <div class="inner-content not-full-width">
         <div class="file-wrapper big-n-beautiful comfy">
           select a photo
           <input type="file" id="file-upload">
@@ -47,7 +47,7 @@
 
           <tr>
             <td colspan="3">
-              <input id="threshold" type="range" value="0" min="0" max="0">
+              <input class="not-full-width" id="threshold" type="range" value="0" min="0" max="0">
             </td>
           </tr>
 
