keep "select photo" from getting toooo wide

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,8 +17,8 @@
       <h1>Butter</h1>
     </header>
     <div class="content">
-      <div class="inner-content not-full-width">
-        <div class="file-wrapper big-n-beautiful comfy">
+      <div class="inner-content">
+        <div class="file-wrapper big-n-beautiful comfy not-full-width">
           select a photo
           <input type="file" id="file-upload">
         </div>
