--- a/demo/index.html
+++ b/demo/index.html
@@ -60,6 +60,9 @@
           </tr>
         </table>
       </form>
+      <a href="https://github.com/brandly/butter.js">
+        <img src="github.png" alt="GitHub" class="github">
+      </a>
     </div>
     <script src="butter.js"></script>
     <script src="app.js"></script>
