restrict files to images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="inner-content">
         <div class="file-wrapper big-n-beautiful comfy not-full-width">
           select a photo
-          <input type="file" id="file-upload">
+          <input type="file" id="file-upload" accept="image/*">
         </div>
       </div>
 
