--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <canvas id="sort-pixels"></canvas>
 
       <form class="inner-content" name="butter-form">
-        <table>
+        <table class="not-full-width">
           <tr>
             <td width="33%">
               <input id="mode-black" value="black" type="radio" name="mode" checked="checked">
@@ -47,7 +47,7 @@
 
           <tr>
             <td colspan="3">
-              <input class="not-full-width" id="threshold" type="range" value="0" min="0" max="0">
+              <input id="threshold" type="range" value="0" min="0" max="0">
             </td>
           </tr>
 
