use <img> for final viewing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
 
-      <canvas id="sort-pixels"></canvas>
+      <img id="sort-pixels"></img>
 
       <form class="inner-content" name="butter-form">
         <table class="not-full-width">
