--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>butter</title>
+    <title>Butter</title>
     <meta name="description" content="pixel sorting for the internet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
 
@@ -11,6 +11,12 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="./favicon.ico">
+
+    <meta property="og:title" content="Butter">
+    <meta property="og:description" content="pixel sorting for the internet">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://butter.pics">
+    <meta property="og:image" content="http://butter.pics/fb-boat.jpg">
   </head>
   <body>
     <header>
