needed smaller img

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="pixel sorting for the internet">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://butter.pics">
-    <meta property="og:image" content="http://butter.pics/fb-boat.jpg">
+    <meta property="og:image" content="http://butter.pics/fb-small.jpg">
   </head>
   <body>
     <header>
