--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <meta property="og:title" content="Butter">
     <meta property="og:description" content="pixel sorting for the internet">
