--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         </div>
       </div>
 
-      <img id="sort-pixels"></img>
+      <div id="image-wrapper">
+        <img id="sort-pixels"></img>
+        <div class="spinner"></div>
+      </div>
 
       <form class="inner-content" name="butter-form">
         <table class="not-full-width">
